2023-12-20T04:09:10Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7270865685 # 4365
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2023-12-20
* notice: query file size: 24319
* notice: accum prev / next / diff: re vi: 0 211 / 0 213 / +0 +2

2023-12-20T00:34:52Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7269311671 # 4364
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2023-12-20
* notice: query file size: 24319
* notice: accum prev / next / diff: re vi: 0 209 / 0 211 / +0 +2

2023-12-19T20:07:58Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7267042996 # 4363
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2023-12-19
* notice: query file size: 24321
* notice: accum prev / next / diff: re vi: 0 207 / 0 209 / +0 +2

2023-12-19T16:10:22Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7264469418 # 4362
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2023-12-19
* notice: query file size: 24291
* notice: accum prev / next / diff: re vi: 0 205 / 0 207 / +0 +2

2023-12-03T20:09:07Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7079095238 # 4267
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2023-12-03
* notice: query file size: 24331
* notice: accum prev / next / diff: re vi: 0 204 / 0 205 / +0 +1

2023-10-18T04:10:36Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6556096822 # 3987