@@ -1,3 +1,9 @@
+2023-12-20T20:09:34Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7280285852 # 4369
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2023-12-20
+* notice: query file size: 24309
+* notice: accum prev / next / diff: re vi: 0 213 / 0 215 / +0 +2
+
 2023-12-20T04:09:10Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7270865685 # 4365
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2023-12-20
